feat: handle client data and validate it

--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.2",
-    "@nestjs/platform-ws": "^9.3.2",
     "@nestjs/websockets": "^9.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.4",
-    "ws": "^8.12.0"
+    "zod": "^3.20.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -39,7 +38,6 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
-    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
